// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders custom trigger component 1`] = `
<span
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <a
    aria-describedby="trigger_2"
    aria-label=""
    className="ds-base ds-c-tooltip__trigger ds-c-tooltip__trigger-icon"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <TooltipIcon />
  </a>
  <CSSTransition
    classNames="ds-c-tooltip"
    in={false}
    timeout={250}
  >
    <span
      aria-hidden={true}
      className="ds-c-tooltip"
      data-placement="top"
      id="trigger_2"
      onBlur={[Function]}
      role="tooltip"
      style={
        Object {
          "maxWidth": "300px",
          "zIndex": "9999",
        }
      }
      tabIndex={null}
    >
      <span
        className="ds-c-tooltip__arrow"
        data-popper-arrow={true}
      />
      <span
        className="ds-c-tooltip__content ds-base"
      >
        Tooltip body content
      </span>
      <span
        className="ds-c-tooltip__interactive-border"
        style={
          Object {
            "border": "15px solid transparent",
            "left": "-15px",
            "top": "-15px",
            "zIndex": "-999",
          }
        }
      />
    </span>
  </CSSTransition>
</span>
`;

exports[`Tooltip renders default trigger icon 1`] = `
<span
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button
    aria-describedby="trigger_1"
    aria-label=""
    className="ds-base ds-c-tooltip__trigger ds-c-tooltip__trigger-icon"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <TooltipIcon />
  </button>
  <CSSTransition
    classNames="ds-c-tooltip"
    in={false}
    timeout={250}
  >
    <span
      aria-hidden={true}
      className="ds-c-tooltip"
      data-placement="top"
      id="trigger_1"
      onBlur={[Function]}
      role="tooltip"
      style={
        Object {
          "maxWidth": "300px",
          "zIndex": "9999",
        }
      }
      tabIndex={null}
    >
      <span
        className="ds-c-tooltip__arrow"
        data-popper-arrow={true}
      />
      <span
        className="ds-c-tooltip__content ds-base"
      >
        Tooltip body content
      </span>
      <span
        className="ds-c-tooltip__interactive-border"
        style={
          Object {
            "border": "15px solid transparent",
            "left": "-15px",
            "top": "-15px",
            "zIndex": "-999",
          }
        }
      />
    </span>
  </CSSTransition>
</span>
`;

exports[`Tooltip renders dialog tooltip 1`] = `
<span>
  <button
    aria-describedby="trigger_3"
    aria-label=""
    className="ds-base ds-c-tooltip__trigger ds-c-tooltip__trigger-icon"
    onClick={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <TooltipIcon />
  </button>
  <CSSTransition
    classNames="ds-c-tooltip"
    in={false}
    timeout={250}
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={false}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
          "initialFocus": "#trigger_3",
        }
      }
      paused={false}
    >
      <span
        aria-hidden={true}
        className="ds-c-tooltip"
        data-placement="top"
        id="trigger_3"
        role="dialog"
        style={
          Object {
            "maxWidth": "300px",
            "zIndex": "9999",
          }
        }
        tabIndex="-1"
      >
        <span
          className="ds-c-tooltip__arrow"
          data-popper-arrow={true}
        />
        <span
          className="ds-c-tooltip__content ds-base"
        >
          Tooltip body content
        </span>
      </span>
    </FocusTrap>
  </CSSTransition>
</span>
`;
